--- a/styles/style.css
+++ b/styles/style.css
@@ -180,7 +180,31 @@ text-align: center;
     grid-template-columns: repeat(4,1fr);
     margin-left: 120px;
     margin-top: 50px;
+    gap:30px;
 }
+.sponser h1{
+    text-align:center;
+}
+.sponser p{
+   
+    color: #727272;
+text-align: center;
+font-family: Work Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px; 
+}
+.spnser-item{
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+    margin-left: 150px;
+    margin-top: 60px;
+    gap:30px;
+}
+.box2{
+    gap:100px;
+}
+
 /* mobile devices */
 @media screen and (max-width: 576px) {
     header{
@@ -213,7 +237,7 @@ text-align: center;
 }
 .experience-img{
     width: 100%;
-    margin-top: 350px;
+    margin-top: 450px;
     
 }
 .part{
@@ -227,6 +251,9 @@ text-align: center;
 .box-dec{
     grid-template-columns: repeat(1,1fr);
     
+}
+.spnser-item{
+    grid-template-columns: repeat(1,1fr);
 }
 }
 /* medium or tablet devices */
